2007-04-16  Kouhei Sutou  <kou@cozmixng.org>

	* misc/update-colors.rb: added colors.rb generator that extracts
	popular colors from Wikipedia:List_of_colors page.

	* src/lib/cairo/colors.rb: added popular colors generated by
	updated-colors.rb.

	* src/lib/cairo/color.rb: added high-level color class including
	CMYK support.

	* src/rb_cairo_pattern.c, src/lib/cairo.rb,
	src/lib/cairo/context.rb, src/lib/cairo/pattern.rb: supported
	Cairo::Color.

2007-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c
	(cr_push_group): added error handling.
	(cr_pop_group_to_source): updated source class.

	* src/lib/cairo/context.rb, src/lib/cairo/context/blur.rb: added
	Cairo::Context#pseudo_blur.

	* samples/blur.rb: added a sample script for Cairo::Context#pseudo_blur.

	* src/rb_cairo_context.c
	(cr_pop_group): returned pattern.
	(cr_push_group): returned popped pattern if not pop_to_source.

2007-04-13  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: supported 'rake release'.

	* extconf.rb, Rakefile: supported RubyGems.

2007-04-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c (yield_and_finish):
	- renamed from ensure_finish_proc().
	- don't use ensure.

	* src/rb_cairo_surface.c (ensure_finish_proc): supported
	Cairo::Surface.new with block. If block is exited, a surface is
	finished automatically.

	* sample/*.rb: followed the above change.

2007-03-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.4.1 -> 1.6.0.

2007-03-10  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: added 1.4.1 entry.

	* pkg-config.rb: re-added.

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.6.0 -> 1.4.1 for
	releasing 1.4.1.

2007-03-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.4.0 -> 1.6.0.

	* dist.sh: added release script.

	* NEWS: added 1.4.0 entry.

	* src/rb_cairo_context.c (cr_get_scaled_font): checked cairo
	version.

	* setup.rb: removed dependency on setup.rb. used Ruby-GNOME2
	style.